...
                  child: _showSignIn
                      ? SignInCard(
                          key: const Key("sign-in"),
                          signUpButton: SizedBox(
                            width: 200,
                            child: TextButton(
                                key: const ValueKey("or-sign-up-button"),
                                onPressed: () {
                                  setState(() => _showSignIn = false);
                                },
                                child: const Text(
                                  'Or Sign Up',
                                )),
...
