...
                            width: 3,
                          ),
                          SizedBox(
                            width: 110,
                            child: FittedBox(
                                fit: BoxFit.fitWidth,
                                child: Text("Create reminder")),
                          ),
                        ],
                      ),
                    ),
                    onPressed: () {
                      showDialog(
...
